force-app/main/default/objects/KYC_XB__c/KYC_XB__c.object-meta.xml
<CustomObject>
    <label>KYC XB</label>
    <nameField>
        <displayFormat>KYC-XB-{0000000}</displayFormat>
        <label>KYC XB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYCs XB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>