force-app/main/default/objects/KYC_XB__c/fields/ABA_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>ABA_Routing_Number__c</fullName>
    <label>ABA Routing Number</label>
    <type>TextArea</type>
</CustomField>