force-app/main/default/objects/KYC_XB__c/fields/Adm_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Adm_Postal_Code__c</fullName>
    <inlineHelpText>ZIP code of the administrative address. (Optional)</inlineHelpText>
    <label>Administrative Postal Code</label>
    <type>TextArea</type>
</CustomField>