force-app/main/default/objects/KYC_XB__c/fields/Administrative_Address__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Address__c</fullName>
    <label>Administrative Address</label>
    <type>TextArea</type>
</CustomField>