force-app/main/default/objects/KYC_XB__c/fields/Administrative_City__c.field-meta.xml
<CustomField>
    <fullName>Administrative_City__c</fullName>
    <label>Administrative City</label>
    <type>TextArea</type>
</CustomField>