force-app/main/default/objects/KYC_XB__c/fields/Administrative_Complement__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Complement__c</fullName>
    <label>Administrative Complement</label>
    <type>TextArea</type>
</CustomField>