force-app/main/default/objects/KYC_XB__c/fields/Administrative_Country__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Country__c</fullName>
    <label>Administrative Country</label>
    <type>TextArea</type>
</CustomField>