force-app/main/default/objects/KYC_XB__c/fields/Administrative_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Postal_Code__c</fullName>
    <label>Administrative Postal Code</label>
    <type>TextArea</type>
</CustomField>