force-app/main/default/objects/KYC_XB__c/fields/Administrative_State__c.field-meta.xml
<CustomField>
    <fullName>Administrative_State__c</fullName>
    <label>Administrative State</label>
    <type>TextArea</type>
</CustomField>