force-app/main/default/objects/KYC_XB__c/fields/Administrative_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Street_Number__c</fullName>
    <label>Administrative Street Number</label>
    <type>TextArea</type>
</CustomField>