force-app/main/default/objects/KYC_XB__c/fields/Bank_Has_Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Bank_Has_Intermediary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Has Intermediary</label>
    <type>Checkbox</type>
</CustomField>