force-app/main/default/objects/KYC_XB__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <type>TextArea</type>
</CustomField>