force-app/main/default/objects/KYC_XB__c/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <label>Complement</label>
    <type>TextArea</type>
</CustomField>