force-app/main/default/objects/KYC_XB__c/fields/Conformity__c.field-meta.xml
<CustomField>
    <fullName>Conformity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conformity</label>
    <type>Checkbox</type>
</CustomField>