force-app/main/default/objects/KYC_XB__c/fields/Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Name__c</fullName>
    <label>Corporate Name</label>
    <type>TextArea</type>
</CustomField>