force-app/main/default/objects/KYC_XB__c/fields/Corporate_Registration__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Registration__c</fullName>
    <label>Corporate Registration</label>
    <type>TextArea</type>
</CustomField>