force-app/main/default/objects/KYC_XB__c/fields/Has_PEP__c.field-meta.xml
<CustomField>
    <fullName>Has_PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has PEP</label>
    <type>Checkbox</type>
</CustomField>