force-app/main/default/objects/KYC_XB__c/fields/IBAN_Number__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Number__c</fullName>
    <label>IBAN Number</label>
    <type>TextArea</type>
</CustomField>