force-app/main/default/objects/KYC_XB__c/fields/Intermediary_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Bank_Name__c</fullName>
    <label>Intermediary Bank Name</label>
    <type>TextArea</type>
</CustomField>