force-app/main/default/objects/KYC_XB__c/fields/International_Carrier__c.field-meta.xml
<CustomField>
    <fullName>International_Carrier__c</fullName>
    <label>International Carrier</label>
    <type>TextArea</type>
</CustomField>