force-app/main/default/objects/KYC_XB__c/fields/LegalApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>LegalApprovalStatus__c</fullName>
    <label>Legal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LegalApprovalStatus</valueSetName>
    </valueSet>
</CustomField>