force-app/main/default/objects/KYC_XB__c/fields/Personal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Personal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYCs XB</relationshipLabel>
    <relationshipName>KYCs_XB</relationshipName>
    <type>Lookup</type>
</CustomField>