force-app/main/default/objects/KYC_XB__c/fields/Service_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Service_Shipping__c</fullName>
    <label>Product/Service Shipping</label>
    <type>TextArea</type>
</CustomField>