force-app/main/default/objects/KYC_XB__c/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <label>Street Number</label>
    <type>TextArea</type>
</CustomField>