force-app/main/default/objects/KYC_XB__c/fields/Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code__c</fullName>
    <label>Swift Code</label>
    <type>TextArea</type>
</CustomField>