force-app/main/default/objects/KYC_XB__c/fields/URLs_Quantity__c.field-meta.xml
<CustomField>
    <fullName>URLs_Quantity__c</fullName>
    <label>URLs Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>