force-app/main/default/objects/KYC_XB__c/fields/Wire_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Wire_Instructions__c</fullName>
    <label>Wire Instructions</label>
    <type>TextArea</type>
</CustomField>