force-app/main/default/objects/KYC_XB__c/validationRules/Validation_LegalApprovalStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_LegalApprovalStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(LegalApprovalStatus__c, &quot;Approved&quot;),
  NOT(ISNEW()),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Cannot modify once approved.</errorMessage>
</ValidationRule>