force-app/main/default/objects/KYC_XB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trade_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Stage_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>