force-app/main/default/objects/KYC_XB__c/listViews/Legal_Compliance_KYC_XB.listView-meta.xml
<ListView>
    <fullName>Legal_Compliance_KYC_XB</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal &amp; Compliance</label>
    <queue>Legal_Compliance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>